# quantjourney-bt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  WINDOWS.md  pyproject.toml  strategy.bat  strategy.py  strategy.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
backtester/: bt_payload.py  core.py  lake_api.py  local_data.py  local_lake.py  local_validation.py  reporting_frequency.py  sample_data.py  universe.py  version.py
backtester/cli/: __init__.py  qj_data.py  qj_data_api.py  qj_data_views.py  strategy_runner.py
backtester/engines/: __init__.py  benchmark.py  blotter.py  performance.py
backtester/execution/: contract_spec.py  fill_engine.py  simulator.py  slippage.py
backtester/mixins/: sdk_client.py
backtester/portfolio/: book.py  instr_data.py  portf_calc.py  portf_data.py  rebalance.py  weight_cost.py
backtester/portfolio/accounting/: ledger.py
backtester/risk/: inverse_vol.py  risk_parity.py
backtester/sdk/: client.py
backtester/walkforward/: __init__.py  config.py  engine.py  result.py  runner.py
backtester/walkforward/folds/: __init__.py  anchored.py  base.py  expanding.py  purge.py  rolling.py
backtester/walkforward/optimization/: grid.py  optuna_.py
backtester/walkforward/statistics/: __init__.py  aggregation.py  deflated_sharpe.py  interpretation.py  overfit.py  pbo.py
compare/: README.md
compare/native/: README.md  backtrader_engine.py  common.py  lean_algorithm.py  lean_engine.py  pm_bt_engine.py  qj_engine.py  runner.py  vectorbt_engine.py  zipline_engine.py
compare/quantconnect/: run_lean.py
docs/: ROADMAP.md  performance-0.12.4.md  public_scope.md  release.md
docs/research/: backlog.md  knowledge.md  loop-log.md  trial-registry.md
docs/research/strategies/: _TEMPLATE.md  low-volatility-anomaly.md  post-earnings-announcement-drift.md  quality-composite.md  quality-screened-value-composite.md  regime-gated-low-volatility-anomaly.md  roic-momentum-blend.md  roic-momentum-sequential-screen.md  roic-momentum-v3-tighter-roic-screen.md  value-composite.md
docs/strategy-results/: README.md
docs/superpowers/plans/: 2026-07-16-minio-local-data-sctr-backtest.md  2026-07-18-lake-api-client.md  2026-07-18-research-loop.md
docs/superpowers/specs/: 2026-07-16-minio-local-data-sctr-backtest-design.md  (+2 more)
quality/: mypy-baseline.json
release/: public_artifacts.txt
skills/: README.md
skills/qj-config-helper/: SKILL.md
skills/qj-report-analyst/: SKILL.md
skills/qj-research-loop/: SKILL.md
skills/qj-strategy-ideas/: SKILL.md
skills/qj-strategy-reviewer/: SKILL.md
strategies/: README.md  example_orders_01_market_sma_cross.py  example_orders_02_market_rsi_reversion.py  example_orders_03_limit_rsi_dip.py  example_orders_04_limit_trend_pullback.py  example_orders_05_stop_breakout_entry.py  example_orders_06_stop_loss_protection.py  example_orders_07_stop_limit_breakout.py  example_orders_08_stop_limit_protection.py  example_orders_09_trailing_stop_trend.py  example_orders_10_trailing_stop_rsi.py  example_orders_11_trailing_stop_limit.py  example_orders_12_bracket_trend.py  example_orders_13_bracket_rsi_reversion.py  example_orders_14_oco_dip_or_breakout.py  example_orders_15_intraday_5m_bracket_reversion.py  example_orders_16_intraday_30m_stop_breakout.py  example_orders_17_monthly_rotation_orders.py  example_orders_18_signal_change_rotation_orders.py  example_orders_19_fx_momentum_lots.py  example_orders_20_futures_donchian_contracts.py  example_weights_01_sma_daily.py  example_weights_02_monthly_drift_etf.py  example_weights_03_weekly_rsi_reversion.py  example_weights_04_quarterly_dual_momentum.py  example_weights_05_monthly_inverse_vol.py  example_weights_06_signal_change_defensive.py  example_weights_07_intraday_rsi_15m.py  example_weights_08_intraday_1m_ema_scalp.py  example_weights_09_intraday_1h_sma_trend.py  example_weights_10_monthly_circuit_breaker.py  example_weights_11_quarterly_te_cost_gate.py  example_weights_12_daily_partial_drift.py  example_weights_13_pairs_ratio_zscore.py  example_weights_14_pairs_hedge_ratio.py  example_weights_15_cross_sectional_momentum.py  example_weights_16_cross_sectional_reversal.py  example_weights_17_vol_target_trend.py  example_weights_18_vol_target_momentum.py  example_weights_19_risk_parity_multiasset.py  (+14 more)
tests/: test_bt_payload.py  test_execution_architecture.py  test_lake_api.py  test_local_data.py  test_local_lake.py  test_local_minio_source.py  test_local_validation.py  test_p0_regressions.py  test_performance_refactors.py  test_public_repo.py  test_qj_data_cli.py  test_release_verifier.py  test_sctr_momentum_regime_gated.py  test_sctr_momentum_regime_gated_strategy.py  test_strategy_book.py  test_strategy_launcher.py  test_strategy_runner.py  test_walkforward_statistics.py
tools/: com.quantjourney.research-loop.plist  research_loop_attempts.sh  research_loop_daily.sh  run_research_loop.sh  verify_public_release.py
