[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantjourney-bt"
version = "0.10.1"
description = "Python-native backtesting engine for reproducible portfolio and order-based strategy research"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "QuantJourney", email = "hello@quantjourney.pro"}]
keywords = [
    "backtesting",
    "portfolio",
    "quant",
    "trading",
    "research",
    "quantitative-finance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
    "requests>=2.31",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.11",
    "seaborn>=0.13",
    "quantjourney_ti>=0.3.1",
    "psutil>=5.9",
    "python-dateutil",
    "pydantic>=2.0",
    "questionary>=2.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "hypothesis",
    "ruff==0.15.21",
    "build>=1.2",
    "twine>=5",
]
typecheck = [
    "mypy==2.2.0",
    "pandas-stubs==2.3.3.260113",
    "types-python-dateutil==2.9.0.20260518",
]
data = ["yfinance>=0.2"]
reports = ["scipy>=1.11", "seaborn>=0.13"]
wf = ["optuna>=3.0"]
minio = ["pyarrow>=14"]

[project.urls]
Homepage = "https://backtester.quantjourney.cloud"
Documentation = "https://backtester.quantjourney.cloud"
Changelog = "https://backtester.quantjourney.cloud/changelog"
Source = "https://github.com/QuantJourneyOrg/quantjourney-bt"
Issues = "https://github.com/QuantJourneyOrg/quantjourney-bt/issues"

[project.scripts]
qj-bt = "backtester.cli.qj_data:main"

[tool.setuptools.packages.find]
include = ["backtester", "backtester.*"]

[tool.setuptools.package-data]
backtester = [
    "py.typed",
    "plots/theme/configs/*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
files = ["backtester"]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
no_implicit_optional = true
strict_optional = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
show_error_codes = true
pretty = false
